Fixed few bugs 1. When a user logs in and his/her username does not exists in the database, now it's handeled and no exception will be thrown. 2. When a user logs in and gets asked for the security answer, there is an option to cancel which will actually log the user out and redirect him/her to the home page. 3. Also for better looks, I added colors for the buttons submit and cancel in the security questions' page. 4. The code has been tested with a local copy of the database and functions well. However, there is a connection issue to the SQL using the VPN service. The exact error when using the VPN to the server's DB is: "error: 26 - Error Locating Server/Instance Specified".

--- a/744Project/Views/SecurityQuestions/Index.cshtml
+++ b/744Project/Views/SecurityQuestions/Index.cshtml
@@ -78,9 +78,16 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input id="submit" type="submit" value="Submit" class="btn btn-default" />
+                            <input style="background-color:#6EEF2B; font-size:large; font-weight: bold " id="submit" type="submit" value="Submit" class="btn btn-default" />                            
                         </div>
                     </div>
+                </form>
+                <form method="post" action="~/SecurityQuestions/Cancel">
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input style="background-color:#da5858; font-size:large; font-weight: bold " id="cancel" type="submit" value="Cancel" class="btn btn-default" />
+                        </div>
+                   </div>
                 </form>
 
             </div>
